--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.80.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.14.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
