--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/evil-icons": "^12.0.1",
     "@react-native-vector-icons/fontawesome6": "^12.0.1",
@@ -20,9 +21,11 @@
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
