--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
